Reskin, update to map.json, update to dialogue

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         top: 1vh;
         display: flex;
         flex-direction: column;
-        color: red;
+        color: palevioletred;
       }
     </style>
     <div id="app">
